2012-02-10  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Make the schema validation example program work with no arguments.

	* examples/schemavalidation/main.cc: Correct the test for number of arguments.

2012-01-30  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Parser: Throw more detailed error messages.

	* examples/dom_parser/main.cc: Add command parameters -v -e -t.
	* libxml++/exceptions/exception.[h|cc]: Add format_xml_error() and
	format_xml_parser_error().
	* libxml++/parsers/domparser.cc: Call format_xml_error() and
	format_xml_parser_error() to get more detailed messages in exceptions.
	* libxml++/parsers/parser.[h|cc]: Add [set|get]_throw_messages() and (local in
	.cc until ABI can be broken) on_parser_[error|warning](). Bug #304020.

2012-01-30  Murray Cumming  <murrayc@murrayc.com>

	Document: Make the Document(xmlDoc*) constructor protected.

	* libxml++/document.h: This was requested in bug #668980 (A. Pignotti).

2011-09-09  Murray Cumming  <murrayc@murrayc.com>

	Document: write_to_*(): Make sure that we write UTF-8 out.

	* libxml++/document.cc: Because the xmlDocDump*() functions use some other 
	encoding if you specify NULL, causing errors such as:
	xmlEscapeEntities : char out of range

2.34.2:

2011-09-06  Mathias Lorente  <mathias.lorente@free.fr>

	Node::create_new_child_node(): Use the default namespace if none is specified.

	* libxml++/nodes/node.cc: This is better than just ignoring it.
	Bug #656110

2011-07-20  Murray Cumming  <murrayc@murrayc.com>

	ContentNode::get_content(): Fix a documentation typo.

	* libxml++/nodes/contentnode.h: Mention &gt; instead of &qt (a q 
	instead of a g, and no ;.).

2011-07-20  Mathias Lorente  <mathias.lorente@free.fr>

	Add Element::add_child_cdata().

	* libxml++/nodes/element.[h|cc]: Add add_child_cdata(), using 
	xmlNewCDataBlock(), like the existing add_child_text().
	* examples/sax_parser_build_dom/example.xml:
	* examples/sax_parser_build_dom/svgparser.[h|cc]: Use the new API.

2.34.1:
