@@ -52,6 +52,9 @@ private:
 };
 
 /** Format an _xmlError struct into a text string, suitable for printing.
+ *
+ * @newin{2,36}
+ *
  * @param error Pointer to an _xmlError struct or <tt>0</tt>. If <tt>0</tt>,
  *              the error returned by xmlGetLastError() is used.
  * @returns A formatted text string. If the error struct does not contain an
@@ -60,6 +63,9 @@ private:
 Glib::ustring format_xml_error(const _xmlError* error = 0);
 
 /** Format a parser error into a text string, suitable for printing.
+ *
+ * @newin{2,36}
+ *
  * @param parser_context Pointer to an _xmlParserCtxt struct.
  * @returns A formatted text string. If the parser context does not contain an
  *          error (parser_context->lastError.code == XML_ERR_OK), an empty
